# scoutlens

./: .gitignore  AGENTS.md  CLAUDE.md  DATA_LICENSES.md  DOLT_REMOTE.md  LICENSE  README.md  manifest  pyproject.toml
.beads/: README.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: tests.yml
artifacts/: README.md  gate2_results.json  robustness_results.json  transfer_analysis_results.json
config/: experiment.json
configs/: README.md
data/: README.md
docs/: 00_ScoutLens_Project_Brief_v1.md  baseline-b-standardization.md  chronological-split.md  context-diagnostics.md  data-dictionary.md  data-manifest.csv  data-provenance.md  data-quality-report.md  decisions-log.md  eligible-population.md  error-analysis.md  feasibility-report.md  feature-definitions.md  gate-1-decision.md  gate-2-decision.md  minutes-derivation.md  project-charter.md  recruitment-validation-protocol.md  robustness-checks.md  statsbomb-feature-compatibility.md  statsbomb-pipeline.md  statsbomb-provenance.md  temporal-retrieval-global.md  temporal-retrieval-within-role.md  transfer-analysis.md
notebooks/: README.md
src/scoutlens/data/: eligibility.py  (+3 more)
tests/data/: test_eligibility.py  test_minutes.py  test_player_counts.py  test_validation.py
tests/evaluation/: test_artifact_drift.py  test_artifacts.py  test_diagnostics.py  test_retrieval.py  test_run_manifest.py  test_similarity.py  test_temporal.py
tests/features/: test_aggregation.py
tests/statsbomb/: test_statsbomb_ingestion.py  test_statsbomb_minutes.py  test_statsbomb_validation.py
(+13 files in other folders)
