[project]
name = "scoutlens"
version = "0.1.0"
description = "ScoutLens feasibility spike — event-derived player-role signal"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "requests>=2.32",
    "pyarrow>=17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scoutlens"]
